--- a/index.html
+++ b/index.html
@@ -91,11 +91,11 @@
                     цветовых переходов.
                 </p>
 
-                <!-- <div class='btn btn-2'>Заказать</div> -->
+                <!-- <div class='btn'>Заказать</div> -->
 
 
                 <div class="button-item">
-                    <a class=' btn-2 btn' ><span>Заказать</span></a>
+                    <a class=' btn-2 btn'><span>Заказать</span></a>
                 </div>
             </div>
 
@@ -138,7 +138,7 @@
                 </p>
                 <!-- <div class='btn'>Заказать</div> -->
                 <div class="button-item">
-                    <a class=' btn-2 btn' ><span>Заказать</span></a>
+                    <a class=' btn-2 btn'><span>Заказать</span></a>
                 </div>
             </div>
 
@@ -180,7 +180,7 @@
                 </p>
                 <!-- <div class='btn'>Заказать</div> -->
                 <div class="button-item">
-                    <a class=' btn-2 btn' ><span>Заказать</span></a>
+                    <a class=' btn-2 btn'><span>Заказать</span></a>
                 </div>
             </div>
 
@@ -221,7 +221,7 @@
                 </p>
                 <!-- <div class='btn'>Заказать</div> -->
                 <div class="button-item">
-                    <a class=' btn-2 btn' ><span>Заказать</span></a>
+                    <a class=' btn-2 btn'><span>Заказать</span></a>
                 </div>
             </div>
 
@@ -260,7 +260,7 @@
                 </p>
                 <!-- <div class='btn'>Заказать</div> -->
                 <div class="button-item">
-                    <a class=' btn-2 btn' ><span>Заказать</span></a>
+                    <a class=' btn-2 btn'><span>Заказать</span></a>
                 </div>
             </div>
 
@@ -293,7 +293,7 @@
         <div class="section-price " id='section-price'>
             <div class='section-price-first'>
                 <div class="text section-text" data-aos="fade-up" data-aos-duration="800">
-                    <h1 class = 'h1'>Рассчет стоимости</h1>
+                    <h1 class='h1'>Рассчет стоимости</h1>
                     <!-- <p> Выберите материал и размер:</p> -->
                 </div>
                 <div class="slider" data-aos="fade-up" data-aos-duration="800">
@@ -317,7 +317,7 @@
 
             <div class='section-price-second'>
                 <div class="text section-text" data-aos="fade-up" data-aos-duration="800">
-                    <h1 class = 'h11'>Рассчет стоимости</h1>
+                    <h1 class='h11'>Рассчет стоимости</h1>
                     <p> Выберите материал и размер:</p>
                 </div>
 
@@ -387,6 +387,19 @@
                 <h1>Контакты</h1>
                 <!-- <p> Выберите материал и размер:</p> -->
             </div>
+            <svg width="365" height="80" viewBox="0 0 365 80" fill="none" xmlns="http://www.w3.org/2000/svg"
+                xmlns:xlink="http://www.w3.org/1999/xlink"></svg>
+                <rect width="365" height="80" fill="url(#pattern0)" />
+                <image>
+                    <pattern id="pattern0" patternContentUnits="objectBoundingBox" width="1" height="1">
+                        <use xlink:href="#image0" transform="translate(-0.0541019) scale(0.00123134 0.00561798)" />
+                    </pattern>
+                    <!-- <image id="image0" width="900" height="178" -->
+
+         
+                    </defs>
+            </svg>
+
 
         </div>
     </div>
