--- a/index.html
+++ b/index.html
@@ -81,7 +81,8 @@
 
 
         <div class="section-watercolor section flex" id='section-watercolor'>
-            <img class="bg" src="./images/bg/акварель.jpg" alt="">
+            <img class="bg" src="./images/bg/акварель.png" alt="">
+            <img class=" bgM" src="./images/bg/акварель-м.png" alt="">
             <!-- <img class="bg" src="./images/img (1).png" alt=""> -->
             <div class="text section-text" data-aos="fade-up" data-aos-duration="800">
                 <h1>Портрет акварелью</h1>
@@ -127,7 +128,8 @@
         <div class="section-inc section flex reverce" id='section-inc'>
             <!-- <img class="bg1" src="./images/incbg (2).png" alt=""> -->
 
-            <img class="bg2" src="./images/bg/тушь.jpg" alt="">
+            <img class="bg" src="./images/bg/тушь.png" alt="">
+            <img class="bgM" src="./images/bg/тушь-м.png" alt="">
 
             <!-- <img class="bg2" src="./images/incbg (1).png" alt=""> -->
             <div class="text section-text" data-aos="fade-up" data-aos-duration="800">
@@ -169,7 +171,8 @@
         </div>
 
         <div class="section-pencil section flex" id='section-pencil'>
-            <img class="bg1" src="./images/bg/карандаш.jpg" alt="">
+            <img class="bg" src="./images/bg/карандаш.png" alt="">
+            <img class="bgM" src="./images/bg/карандаш-м.png" alt="">
 
             <div class="text section-text" data-aos="fade-up" data-aos-duration="800">
                 <h1>Портрет карандашом</h1>
@@ -210,7 +213,9 @@
 
         <div class="section-sepia section flex reverce" id='section-sepia'>
             <!-- <img class="bg1" src="./images/bg/сепия.jpg" alt=""> -->
-            <div class="bg"></div>
+            <!-- <div class="bg"></div> -->
+            <img class="bg" src="./images/bg/sepia.png" alt="">
+            <img class="bgM" src="./images/bg/sepia-m.png" alt="">
 
             <div class="text section-text" data-aos="fade-up" data-aos-duration="800">
                 <h1>Портрет Сепия</h1>
@@ -249,7 +254,10 @@
         </div>
 
         <div class="section-acrylic section flex" id='section-acrylic'>
-            <!-- <img class="bg1" src="./images/bg/акрил.jpg" alt=""> -->
+            <img class="bg" src="./images/bg/акрил.png" alt="">
+            <img class="bgM" src="./images/bg/акрил-м.png" alt="">
+            <!-- <img class="bg1" src="./images/bg/акрил.png" alt=""> -->
+            <!-- <div class="bg1" ></div> -->
 
             <div class="text section-text" data-aos="fade-up" data-aos-duration="800">
                 <h1>Акриловая краска</h1>
@@ -290,7 +298,7 @@
 
         </div>
 
-        <div class="section-price " id='section-price'>
+        <div class="section-price section " id='section-price'>
             <div class='section-price-first'>
                 <div class="text section-text" data-aos="fade-up" data-aos-duration="800">
                     <h1 class='h1'>Рассчет стоимости</h1>
@@ -302,11 +310,11 @@
                         <!-- <div class="slide"><img src="./images/watercolor/7.jpg" alt=""></div>
                         <div class="slide"><img src="./images/watercolor/7.jpg" alt=""></div>
                         <div class="slide"><img src="./images/watercolor/7.jpg" alt=""></div> -->
-                        <div class="slide active"><img src="./images/watercolor/7.jpg" alt=""></div>
-                        <div class="slide"><img src="./images/inc/7.jpg" alt=""></div>
-                        <div class="slide"><img src="./images/pencil/2.jpg" alt=""></div>
-                        <div class="slide"><img src="./images/sepia/7.jpg" alt=""></div>
-                        <div class="slide"><img src="./images/acrylic/1.jpg" alt=""></div>
+                        <div class="slide active"><img src="./images/calc/calc (1).jpg" alt=""></div>
+                        <div class="slide"><img src="./images/calc/calc (2).jpg" alt=""></div>
+                        <div class="slide"><img src="./images/calc/calc (4).jpg" alt=""></div>
+                        <div class="slide"><img src="./images/calc/calc (4).jpg" alt=""></div>
+                        <div class="slide"><img src="./images/calc/calc (3).jpg" alt=""></div>
 
 
                     </div>
@@ -381,7 +389,7 @@
 
 
         <div class="section-contacts" id='section-contacts'>
-            <img class="bg1" src="./images/img (3).png" alt="">
+            <img class="bg-contacts" src="./images/bg/img (3).png" alt="">
 
             <div class="text section-text" data-aos="fade-up" data-aos-duration="800">
                 <h1>Контакты</h1>
