--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
                         <div class="slide"><img src="./images/watercolor/7.jpg" alt=""></div> -->
                         <div class="slide active"><img src="./images/calc/calc (1).jpg" alt=""></div>
                         <div class="slide"><img src="./images/calc/calc (2).jpg" alt=""></div>
-                        <div class="slide"><img src="./images/calc/calc (4).jpg" alt=""></div>
+                        <div class="slide"><img src="./images/calc/calc.png" alt=""></div>
                         <div class="slide"><img src="./images/calc/calc (4).jpg" alt=""></div>
                         <div class="slide"><img src="./images/calc/calc (3).jpg" alt=""></div>
 
